Replace more thomlom.dev occurrences

--- a/content/blog/how-to-become-a-front-end-developer/index.mdx
+++ b/content/blog/how-to-become-a-front-end-developer/index.mdx
@@ -32,7 +32,7 @@ HTML represents the structure of a web page, and CSS its layout. You'll use thes
 
 - Resources: You can check out [freeCodeCamp](https://www.freecodecamp.org/learn), especially the basic HTML and basic CSS sections.
 - Practice: build a simple page. Maybe a landing page or a cooking recipe.
-- Blog posts: [Writing Blazing Fast HTML Code](https://thomlom.dev/writing-blazing-fast-HTML-code/), [How to Get Better at Writing CSS](https://thomlom.dev/how-to-get-better-at-writing-css/) and [How to Make a Responsive Grid With Only Three Lines of CSS](https://thomlom.dev/how-to-make-a-list-responsive/).
+- Blog posts: [Writing Blazing Fast HTML Code](https://thomaslombart.com/writing-blazing-fast-HTML-code/), [How to Get Better at Writing CSS](https://thomaslombart.com/how-to-get-better-at-writing-css/) and [How to Make a Responsive Grid With Only Three Lines of CSS](https://thomaslombart.com/how-to-make-a-list-responsive/).
 
 ### JavaScript
 
@@ -40,7 +40,7 @@ That's what powers up your apps. It's a programming language that is important t
 
 - Resources: You can continue with freeCodeCamp on this one, or you can also check out a course from Wes Bos: [Beginner JavaScript](https://beginnerjavascript.com/). If you're practice-oriented, I highly recommend [JavaScript 30](https://javascript30.com/) from Wes Bos as well.
 - Practice: You should be able to build a first small app, such as a to-do app or a countdown.
-- Blog posts: [What You Should Know About JavaScript Arrays](https://thomlom.dev/what-you-should-know-about-js-arrays/) and [Object and Array Destructuring in JavaScript](https://thomlom.dev/object-array-destructuring-javascript/)
+- Blog posts: [What You Should Know About JavaScript Arrays](https://thomaslombart.com/what-you-should-know-about-js-arrays/) and [Object and Array Destructuring in JavaScript](https://thomaslombart.com/object-array-destructuring-javascript/)
 
 ### CSS Framework
 
@@ -64,7 +64,7 @@ By learning a JS framework, you'll learn package managers such as [npm](https://
 
 - Resource: [An excellent React course from Tyler McGinnis](https://tylermcginnis.com/courses/react/). Once finished, you can also take the [React hooks one](https://tylermcginnis.com/courses/react-hooks/) to learn the latest technologies. Alternatively, there's Andrei Neagoie, who created a complete course: [Complete React Developer](https://www.udemy.com/course/complete-react-developer-zero-to-mastery/). On the Vue side, you can rely on [Vue Mastery](https://www.vuemastery.com/courses-path/beginner) or [Vue School](https://vueschool.io/courses), especially [The Vue.js Master Class](https://vueschool.io/courses/the-vuejs-master-class).
 - Practice: you can build a more advanced app here. Maybe a weather app, a movie search app, or if you want, you can make a second version of a to-do app.
-- Blog posts: [Getting Started with Vue](https://thomlom.dev/getting-started-with-vue/) and [How to Create an App with Vue CLI](https://thomlom.dev/how-to-create-an-app-with-vue/). Check them out to have a taste of Vue if you're learning React. I also wrote a post related to tooling for React: [How to Setup ESLint and Prettier for Your React Apps](https://thomlom.dev/setup-eslint-prettier-react/).
+- Blog posts: [Getting Started with Vue](https://thomaslombart.com/getting-started-with-vue/) and [How to Create an App with Vue CLI](https://thomaslombart.com/how-to-create-an-app-with-vue/). Check them out to have a taste of Vue if you're learning React. I also wrote a post related to tooling for React: [How to Setup ESLint and Prettier for Your React Apps](https://thomaslombart.com/setup-eslint-prettier-react/).
 
 ### Modern CSS
 
@@ -82,7 +82,7 @@ However, the skills above are not sufficient to be in the top front-end develope
 If you're sick of JavaScript, I don't have good news for you. Indeed, you may know how to use JavaScript to build cool apps, but that's not all. You should also know **how it works under the hood** and the advanced JavaScript mechanisms, such as the event loop, closures, asynchronous stuff, or the prototype chain.
 
 - Resources: You can go on Frontend Masters and watch a course from Will Sentance entitled [JavaScript: the hard parts](https://frontendmasters.com/courses/javascript-hard-parts-v2/). You can also check out a course from Tyler McGinnis: [Advanced JavaScript](https://tylermcginnis.com/courses/advanced-javascript/).
-- Blog posts: [Reverse-Engineering Airbnb's Internationalization Library](https://thomlom.dev/reverse-engineering-airbnb-internationalization-library/) and [Over 20 Resources to Advance Your JavaScript Skills](https://thomlom.dev/resources-advanced-javascript/)
+- Blog posts: [Reverse-Engineering Airbnb's Internationalization Library](https://thomaslombart.com/reverse-engineering-airbnb-internationalization-library/) and [Over 20 Resources to Advance Your JavaScript Skills](https://thomaslombart.com/resources-advanced-javascript/)
 - Practice: practicing advanced JS is a bit hard to do. It's more of a long-term thing. The more you'll code, the better you'll get. So just practice JS here!
 
 ### Testing
@@ -91,7 +91,7 @@ When building apps, there's always a point when you're not confident when it com
 
 - Resources: Kent C. Dodds is the go-to guy when it comes to testing. He has built a great course called [Testing JavaScript](https://testingjavascript.com).
 - Practice: Test one of your apps. Start small. You don't need to write elaborated tests right off the box! The goal is to get comfortable with tests.
-- Blog posts: [How to Test JavaScript With Jest](https://thomlom.dev/how-to-test-javascript-with-jest/), [The Complete Beginner's Guide to Testing React Apps](https://thomlom.dev/test-react-testing-library/)
+- Blog posts: [How to Test JavaScript With Jest](https://thomaslombart.com/how-to-test-javascript-with-jest/), [The Complete Beginner's Guide to Testing React Apps](https://thomaslombart.com/test-react-testing-library/)
 
 ### Accessibility
 
@@ -105,7 +105,7 @@ You need to know how to build apps with accessibility in mind. **Developers ofte
 Our world moves fast. We want everything right now. That's the same for apps; users can't stand a slow app. On top of that, it's terrible for your business. Learn how you can build performant apps.
 
 - Resources: Yet another course from Frontend Masters by Steve Kinney: [Web Performance](https://frontendmasters.com/courses/web-performance/)
-- Blog posts: [3 Easy Ways to Boost Your Web Application Performance](https://thomlom.dev/3-ways-boost-web-app-performance/)
+- Blog posts: [3 Easy Ways to Boost Your Web Application Performance](https://thomaslombart.com/3-ways-boost-web-app-performance/)
 
 ### SEO
 
@@ -134,7 +134,7 @@ On top of that, start-ups can't always afford a designer. Thus, knowing how to d
 
 - Resources: [Refactoring UI](https://refactoringui.com/book/) is a great book on design. I've heard lately of [Shift Nudge](https://shiftnudge.com/) for getting the best UI skills. It's pricey, but it's worth it, in my opinion.
 - Practice: design is like any skill. The more you'll practice, the better you'll get, period. For that, you can tackle the [Daily UI challenge.](https://www.dailyui.co/)
-- Blog posts: [How to Suck Less at Colors as a Developer](https://thomlom.dev/how-to-suck-less-at-colors/) and [Why Learning Design Is Important for Front-End Developers](https://thomlom.dev/why-learn-design-developer/)
+- Blog posts: [How to Suck Less at Colors as a Developer](https://thomaslombart.com/how-to-suck-less-at-colors/) and [Why Learning Design Is Important for Front-End Developers](https://thomaslombart.com/why-learn-design-developer/)
 
 ### Databases and servers
 
@@ -154,7 +154,7 @@ Indeed, when you apply for a company, they need to know if they can trust you an
 
 Here are the steps to start with a side project:
 
-1. Find an app/project idea. Read [this post if you need help with finding ideas](https://thomlom.dev/how-to-find-ideas/) (self-promotion, again 🙃).
+1. Find an app/project idea. Read [this post if you need help with finding ideas](https://thomaslombart.com/how-to-find-ideas/) (self-promotion, again 🙃).
 2. Build the project if it's feasible. Use the technologies and skills you learned (front-end framework, CSS skills, etc.) and put your code on GitHub. You may be asked by companies to show how you code, and GitHub is great for that.
 3. **Don't quit!** Yes, your project will reach a point when the codebase becomes ugly, but that's the same for everyone, even for large companies.
 4. Deploy the project. Make it available for everyone. [Netlify](https://www.netlify.com) or [ZEIT Now](https://zeit.co) will be your best friends for that.
@@ -221,7 +221,7 @@ Here are some advice for you to succeed:
 - **Be professional but stay relaxed.** You're not interviewing for a bank. The first time I went to an interview, I was surprised at how chill the persons were. So, no pressure (Don't be too chill though, find the sweet spot 😄)
 - **Show you're motivated** by the project. Unfortunately, getting hired for a first job is hard because you don't have previous experiences. However, you can show how much you want the job and contribute to the company.
 - **Adapt your speech** to the person you're speaking to. Don't get too much in technical details if you talk to someone whose job is related to business.
-- **Don't underestimate soft skills.** The interviewer will try to see if you can fit for the job and whether he can work with you or not, especially the persons in tech! Show how great it would be to work with you: communicate, smile, and stay humble. If you need to know which soft skills to get, I wrote a post on the [soft skills every developer should have](https://thomlom.dev/soft-skills-developers/).
+- **Don't underestimate soft skills.** The interviewer will try to see if you can fit for the job and whether he can work with you or not, especially the persons in tech! Show how great it would be to work with you: communicate, smile, and stay humble. If you need to know which soft skills to get, I wrote a post on the [soft skills every developer should have](https://thomaslombart.com/soft-skills-developers/).
 - **Don't lie during interviews.** If you don't know something, then you don't know. It's no big deal if you can't answer all the questions. Experienced developers don't like bull-shit developers.
 - **Developers always make trade-offs.** There's rarely a one-size-fits-all solution. Show that you are aware of that and think about **what brings value to the company**. It demonstrates that you have deep thoughts, and it's much appreciated.
 
