--- a/content/blog/how-to-create-an-app-with-vue/index.mdx
+++ b/content/blog/how-to-create-an-app-with-vue/index.mdx
@@ -81,7 +81,7 @@ Do you feel overwhelmed by the number of files? Don't worry. I'm going to give y
 
 ## Single File Components
 
-Look at the `App.vue` file. If you already [played around with Vue.js](https://thomlom.dev/getting-started-with-vue/) you may have defined your Vue instance like this:
+Look at the `App.vue` file. If you already [played around with Vue.js](https://thomaslombart.com/getting-started-with-vue/) you may have defined your Vue instance like this:
 
 ```javascript
 new Vue({
