--- a/content/blog/how-to-test-javascript-with-jest/index.mdx
+++ b/content/blog/how-to-test-javascript-with-jest/index.mdx
@@ -425,7 +425,7 @@ test("gets the users", async () => {
 
 It's not because Jest works out of the box that it can't be configured, far from it! There are a lot of [configuration options for Jest](https://jestjs.io/docs/en/configuration). You can configure Jest in three different ways:
 
-1. Via the `jest` key in `package.json` (same as `eslintConfig` or `prettier` keys if you [read my last article](https://thomlom.dev/setup-eslint-prettier-react/))
+1. Via the `jest` key in `package.json` (same as `eslintConfig` or `prettier` keys if you [read my last article](https://thomaslombart.com/setup-eslint-prettier-react/))
 2. Via `jest.config.js`
 3. Via any `json` or `js` file using `jest --config`.
 
