--- a/content/blog/time-management-productivity-developers/index.mdx
+++ b/content/blog/time-management-productivity-developers/index.mdx
@@ -8,7 +8,7 @@ next: /soft-skills-developers/
 tags: [productivity, career]
 ---
 
-A few weeks ago, I published a post about [Soft skills every developer should have](https://thomlom.dev/soft-skills-developers/). I’d like to focus on one of them today: ** organization** and to some extent **productivity**. It’s an essential skill to have for many reasons:
+A few weeks ago, I published a post about [Soft skills every developer should have](https://thomaslombart.com/soft-skills-developers/). I’d like to focus on one of them today: ** organization** and to some extent **productivity**. It’s an essential skill to have for many reasons:
 
 - You are **on time**. Being late is annoying, especially for those who are on time.
 - You know **what to do** and you gain time. If you don’t, you may forget tasks such as replying to someone or working on your side-projects bug.
