--- a/content/blog/why-learn-design-developer/index.mdx
+++ b/content/blog/why-learn-design-developer/index.mdx
@@ -42,7 +42,7 @@ Knowing how to code and how to design also makes you more independent. You can b
 
 ## Better communication with designers
 
-Communication in a team is vital. I've already written about it in a previous blog post about [soft skills](https://thomlom.dev/soft-skills-developers/). A front-end developer will have to communicate with its colleagues, back-end developers, product owners, managers, and designers! When you go along with a designer and that you truly work together, it can do wonders in your team.
+Communication in a team is vital. I've already written about it in a previous blog post about [soft skills](https://thomaslombart.com/soft-skills-developers/). A front-end developer will have to communicate with its colleagues, back-end developers, product owners, managers, and designers! When you go along with a designer and that you truly work together, it can do wonders in your team.
 
 Indeed, I'm sure you already got a stunning mockup that was really complex to build. If it ever happens, please, don't complain. Don't shout out loud that the designer is dumb, is not realistic, and knows nothing about code. Instead, cooperate and think of an alternative solution.
 
