--- a/content/blog/year-in-review-2019/index.mdx
+++ b/content/blog/year-in-review-2019/index.mdx
@@ -33,9 +33,9 @@ All of these resources allowed me to become a better tester, deeply understand a
 
 ## Blog
 
-I also created my own technical blog with Gatsby: [thomlom.dev](https://thomlom.dev). I've started from scratch, and as of today, **I have 600+ unique visitors who read my blog every day**, so thank you to all the readers of my blog! It takes time to write articles, and it's a pleasure to know your content is actually read by persons:
+I also created my own technical blog with Gatsby: [thomaslombart.com](https://thomaslombart.com). I've started from scratch, and as of today, **I have 600+ unique visitors who read my blog every day**, so thank you to all the readers of my blog! It takes time to write articles, and it's a pleasure to know your content is actually read by persons:
 
-![Analytics from Nov. to Dec. of thomlom.dev](./analytics.png)
+![Analytics from Nov. to Dec. of thomaslombart.com](./analytics.png)
 
 I wrote different types of posts: tutorial (Discord bot), crash course (React Testing Library), reverse-engineering (Polyglot), collection of tips (Time management and productivity tips). However, I think some of my posts were too long. In 2020, I would like to keep writing posts but shorter ones.
 
