Share block and iframe improvements

--- a/posts/setup-eslint-prettier-react.mdx
+++ b/posts/setup-eslint-prettier-react.mdx
@@ -515,4 +515,7 @@ Here we use ESLint to lint and format JS and JSX files. We also use Prettier to 
 
 If all goes well, you should have a `pre-commit` hook that both lints and format your code. You can find below a video of what running a pre-commit hook with the configuration above looks like:
 
-<YouTubeEmbed id="rhKa5ICkrGk" />
+<YouTubeEmbed
+  id="rhKa5ICkrGk"
+  title="Precommit hook with husky and lint-staged"
+/>
