--- a/posts/vscode-shortcuts-boost-productivity.mdx
+++ b/posts/vscode-shortcuts-boost-productivity.mdx
@@ -10,7 +10,10 @@ tags: [tools]
 
 All the coding courses I took were recorded by instructors who seemed to know their code editor by heart. Seeing them slamming their keyboard and manipulating their code like pros made me think it was just _ridiculous_. That's when I decided to learn all the essential shortcuts of my favorite code editor: [VS Code](https://code.visualstudio.com/). So, if you're looking to be more productive as a developer, don't wait any further and play the video!
 
-<YouTubeEmbed id="zaL3cMovFqs" />
+<YouTubeEmbed
+  id="zaL3cMovFqs"
+  title="YouTube video on VS Code Shortcuts To Boost Your Productivity"
+/>
 
 You'll find below the different shortcuts used in the video:
 
