--- a/posts/writing-blazing-fast-HTML-code.mdx
+++ b/posts/writing-blazing-fast-HTML-code.mdx
@@ -41,7 +41,10 @@ h2.title{My items}+ul.list>li.item.item--${Item $}*4
 
 If you wonder what this ugly code snippet means, give me 10 minutes and watch this video:
 
-<YouTubeEmbed id="3sad_66vGbc" />
+<YouTubeEmbed
+  id="3sad_66vGbc"
+  title="YouTube video on ow to write super-fast HTML with Emmet"
+/>
 
 Alternatively, you can also read the whole post (isn't that nice? 😎)
 
